--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/(.*)", "Destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/api/auth/login",
+      "destination": "https://rightmindsbackend.vercel.app.com/api/auth/login"
+    }
+  ]
 }
