--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,1 @@
-{
-  "rewrites": [
-    {
-      "source": "/api/auth/login",
-      "destination": "https://rightmindsbackend.vercel.app.com/api/auth/login"
-    }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
