:Add quiz endpoint

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.10",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
